syntax = "proto3";


package student;


// Define our service and the method
service Student {
    rpc SendStudent(StudentRequest) returns (StudentResponse);
}


// The student request message
message StudentRequest {
    string name = 1;
    int32 age = 3;
    string faculty = 2;
    Discipline discipline = 4;
}


enum Discipline {
    swimming = 0;
    running = 1;
    boxing = 2;
}

message StudentResponse {
    bool success = 1;
}